<resources>
    <string name="app_name">Booster Test</string>
    <string name="home">Home</string>
    <string name="capital_guaranteed_fund">Capital Guaranteed Fund</string>
    <string name="default_saver_fund">Default Saver Fund</string>
    <string name="moderate_fund">Moderate Fund</string>
    <string name="balanced_fund">Balanced Fund</string>
    <string name="balanced_growth_fund">Balanced Growth Fund</string>
    <string name="high_growth_fund">High Growth Fund</string>
    <string name="welcome">Welcome!</string>
    <string name="some_text">For each of the questions, read the statements and circle the number that most applies to you. If there is more than one person completing this questionnaire, please ask them to use the additional columns provided</string>
    <string name="start_questionnaire">Start Questionnaire</string>
    <string name="introduction">Introduction</string>
    <string name="submit">Submit</string>
    <string name="total_score">Total Score</string>
    <string name="start">Start</string>
    <string name="_27">27</string>
    <string name="your_total_score_is">Your total score is</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
</resources>