<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

    <item
        android:id="@+id/btnHome"
        android:title="@string/home" />

    <item
        android:id="@+id/btnCapitalFund"
        android:title="@string/capital_guaranteed_fund" />

    <item
        android:id="@+id/btnDefaultFund"
        android:title="@string/default_saver_fund" />

    <item
        android:id="@+id/btnModerateFund"
        android:title="@string/moderate_fund" />

    <item
        android:id="@+id/btnBalancedFund"
        android:title="@string/balanced_fund" />

    <item
        android:id="@+id/btnBalancedGrowthFund"
        android:title="@string/balanced_growth_fund" />

    <item
        android:id="@+id/btnHighGrowthFund"
        android:title="@string/high_growth_fund" />

    </group>

</menu>